fix jumping icons

--- a/frontend/src/global_styles/common/header/app-menu.sass
+++ b/frontend/src/global_styles/common/header/app-menu.sass
@@ -9,7 +9,9 @@
     display: flex
     position: relative
     height: 100%
-    min-width: 0px
+    padding: 0 15px
+    justify-content: center
+    align-items: center
 
   &--item-dropdown-indicator
     display: inline-flex
@@ -35,8 +37,7 @@
     color: var(--header-item-font-color)
     font-size: var(--header-item-font-size)
     text-decoration: none
-    min-width: 0px
-    padding: 0 15px
+    min-width: 36px
 
     @media screen and (max-width: $breakpoint-sm)
       padding: 0 8px
